[gd_scene load_steps=20 format=3 uid="uid://dye3h5wtv4xj0"]

[ext_resource type="Script" uid="uid://bj0x21i5otywy" path="res://scripts/widgets/title_screen.gd" id="1_cs5ya"]
[ext_resource type="Texture2D" uid="uid://d20aekke7u5uc" path="res://assets/title/title_screen.png" id="1_dc4i4"]
[ext_resource type="FontFile" uid="uid://dhcc30ong0m8k" path="res://assets/fonts/3x3-Mono.ttf" id="1_fgkus"]
[ext_resource type="FontFile" uid="uid://bj6f0yfp07duq" path="res://assets/fonts/Color Basic.otf" id="1_s4lrb"]
[ext_resource type="Script" uid="uid://c2qd2ern8i8y4" path="res://scripts/widgets/title.gd" id="2_mgrm8"]
[ext_resource type="Script" uid="uid://jy5xes3bye1a" path="res://scripts/widgets/start.gd" id="2_sa3yf"]
[ext_resource type="Texture2D" uid="uid://mepob8iqajs4" path="res://assets/title/spotlight.png" id="6_e54dn"]
[ext_resource type="PackedScene" uid="uid://nbw0ptp4ilr4" path="res://scenes/Title-Cutscenes/scene_transition.tscn" id="8_mykxm"]
[ext_resource type="Script" uid="uid://cjuk0fgffrbc8" path="res://scripts/widgets/credits_button.gd" id="9_ib7db"]
[ext_resource type="AudioStream" uid="uid://fao46hfsjtej" path="res://assets/sounds/music/main_title_ost.mp3" id="9_mykxm"]
[ext_resource type="Script" uid="uid://dpg6o52ol2mix" path="res://scripts/widgets/back.gd" id="11_frs5l"]
[ext_resource type="PackedScene" uid="uid://c4hsk2211ftew" path="res://scenes/Title-Cutscenes/credits.tscn" id="11_u26n3"]

[sub_resource type="LabelSettings" id="LabelSettings_fgkus"]
font = ExtResource("1_s4lrb")
font_size = 18
font_color = Color(0.0973179, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sa3yf"]
font = ExtResource("1_fgkus")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_mynnq"]
font = ExtResource("1_fgkus")
font_size = 4

[sub_resource type="Gradient" id="Gradient_trtic"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dc4i4"]
gradient = SubResource("Gradient_trtic")
fill_from = Vector2(1, 1)
fill_to = Vector2(0.991453, 0.952991)

[sub_resource type="Gradient" id="Gradient_lvxji"]
offsets = PackedFloat32Array(0.23301, 0.621359)
colors = PackedColorArray(0.489688, 0.693191, 0.744392, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e54dn"]
gradient = SubResource("Gradient_lvxji")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs5ya")

[node name="Scene_Transition" parent="." instance=ExtResource("8_mykxm")]
metadata/_edit_use_anchors_ = true

[node name="Backdrop" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 216.0
texture = ExtResource("1_dc4i4")

[node name="Main_Page" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Main_Page"]
modulate = Color(0.25098, 0.376471, 0.831373, 0.552941)
light_mask = 2
visibility_layer = 2
z_index = 4
layout_mode = 0
offset_left = 21.0
offset_right = 195.0
offset_bottom = 231.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Main_Page"]
light_mask = 2
visibility_layer = 2
z_index = 4
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -13.0
offset_right = 184.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 0
text = "lAST cOGNITION_"
label_settings = SubResource("LabelSettings_fgkus")
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("2_mgrm8")

[node name="Timer" type="Timer" parent="Main_Page/Title"]
wait_time = 0.75
autostart = true

[node name="Timer2" type="Timer" parent="Main_Page/Title"]
wait_time = 1.5
autostart = true

[node name="Start_Button" type="Label" parent="Main_Page"]
modulate = Color(0, 0.493211, 0.00585955, 1)
light_mask = 2
visibility_layer = 2
z_index = 4
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 63.0
offset_right = 66.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
text = "Play"
label_settings = SubResource("LabelSettings_sa3yf")
vertical_alignment = 1
script = ExtResource("2_sa3yf")

[node name="Credits_Button" type="Label" parent="Main_Page"]
modulate = Color(0, 0.493211, 0.00585955, 1)
light_mask = 2
visibility_layer = 2
z_index = 4
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 79.0
offset_right = 81.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
text = "Credits"
label_settings = SubResource("LabelSettings_sa3yf")
vertical_alignment = 1
script = ExtResource("9_ib7db")

[node name="Credits_Page" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = 9.0
offset_right = 40.0
offset_bottom = 49.0

[node name="Credits" parent="Credits_Page" instance=ExtResource("11_u26n3")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 26.0
offset_right = 192.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Label" parent="Credits_Page"]
modulate = Color(0, 0.494118, 0.00392157, 1)
light_mask = 2
visibility_layer = 2
z_index = 10
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 152.0
offset_top = 123.0
offset_right = 192.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
text = "Back"
label_settings = SubResource("LabelSettings_mynnq")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_frs5l")

[node name="Darkness_layer" type="PointLight2D" parent="."]
position = Vector2(192, 108)
scale = Vector2(2.06186, 1.15979)
energy = 0.5
blend_mode = 1
texture = SubResource("GradientTexture2D_dc4i4")
texture_scale = 2.91

[node name="Spotlight_Beginning" type="PointLight2D" parent="."]
z_index = 1
position = Vector2(235, -31)
scale = Vector2(1.71875, 1.57552)
energy = 1.7
texture = SubResource("GradientTexture2D_e54dn")

[node name="Spotlight" type="PointLight2D" parent="."]
z_index = 1
position = Vector2(192, 108)
energy = 0.5
texture = ExtResource("6_e54dn")

[node name="Main_Title_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mykxm")
volume_db = -3.0
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="timeout" from="Main_Page/Title/Timer" to="Main_Page/Title" method="_on_timer_timeout"]
[connection signal="timeout" from="Main_Page/Title/Timer2" to="Main_Page/Title" method="_on_timer_2_timeout"]
[connection signal="gui_input" from="Main_Page/Start_Button" to="Main_Page/Start_Button" method="_on_gui_input"]
[connection signal="mouse_entered" from="Main_Page/Start_Button" to="Main_Page/Start_Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main_Page/Start_Button" to="Main_Page/Start_Button" method="_on_mouse_exited"]
[connection signal="gui_input" from="Main_Page/Credits_Button" to="Main_Page/Credits_Button" method="_on_gui_input"]
[connection signal="mouse_entered" from="Main_Page/Credits_Button" to="Main_Page/Credits_Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main_Page/Credits_Button" to="Main_Page/Credits_Button" method="_on_mouse_exited"]
[connection signal="gui_input" from="Credits_Page/Back" to="Credits_Page/Back" method="_on_gui_input"]
[connection signal="mouse_entered" from="Credits_Page/Back" to="Credits_Page/Back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Credits_Page/Back" to="Credits_Page/Back" method="_on_mouse_exited"]
